# shoeprint-image-retrieval

./: .dir-locals.el  .env  .gitignore  Pipfile  README.org  fft_conv_pytorch.py  flake.nix  main.py  parse_results.py  pyproject.toml  requirements.txt  run.py  run.toml  vgg19.py  vgg19_tf.py
Datasets/: WVU2019.txt  create_dataset.sh
Networks/: network-pt.py  network-tf.py  network_pt.py  network_tf.py  vgg19.py  vgg19_tf.py
Similarities/: dim.py  dim_activation_conv.py  ncc.py  orb.py
datasets/: Data
scripts/: conv_animation.py  summed_feature_maps.py
src/shoeprint_image_retrieval/: __init__.py  config.py  customtypes.py  dataloader.py  main.py  ncc.py  network.py  parse_results.py  similarity.py  utils.py
src/shoeprint_image_retrieval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shoeprint_image_retrieval/Networks/: network_pt.py
src/shoeprint_image_retrieval/Similarities/: dim_activation_conv.py
