[project]
name = "shoeprint-image-retrieval"
version = "0.1.0"
description = "Add your description here"
# readme = "README.org" (org files currently cause an error with uv)
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "scikit-learn",
    "tqdm",
    "torchvision==0.14.1",
    "torch==1.13.1",
    "numpy<2",
    "opencv-python",
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "python-lsp-server>=1.11.0",
    "python-lsp-ruff>=2.2.2",
]
python-preference = "only-managed"
python-fetch = "automatic"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]



